--- a/templates/Base.html
+++ b/templates/Base.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>FashionFootprint</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 <link rel="icon" type="image/png" href="/static/logo.png">
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 <header>
 <nav class="navbar navbar-expand-lg custom-navbar navbar-light">
     <div class="container-fluid">
@@ -56,12 +57,21 @@
   </nav>
   </header>
 
-  <main>
+  <main class="flex-fill">
     {% block content %}
     {% endblock %}
   </main>
 
-  <footer style="z-index: 99;display: flex; justify-content: flex-end; bottom: 10px; right: 20px; background-color: white; height: fit-content; width: 100%;">
+  <footer style="
+  background:#f8f9fa;
+  padding:20px;
+  text-align:center;
+  font-size:14px;
+  color:#555;
+  border-top:1px solid #ddd;
+  left:0;
+  width:100%;">
+  <p>&copy; 2026 FashionFootprint</p>
   <a href="MailTo:info@fashionfootprint.com" 
    style="font-weight: bold; color: #2d6969; cursor: pointer; text-decoration: none; padding: 20px;">
    Contact Us
